--- a/index.html
+++ b/index.html
@@ -170,24 +170,25 @@
         </div>
       </div>
     </div>
+  </section>
+  <!-- OUR SERVICES END -->
 
-    <!-- MOBILE VERSION -->
-    <div class="col details-mobile">
+  <!--SERVICES MOBILE VERSION -->
+  <section class="container-fluid mobile-services">
+    <p class="title fs-1 fw-bold">Our Services</p>
+    <div class="col">
       <div class="card">
-        <img src="assets/img/article.jpg" alt="">
+        <img src="assets/img/photography.jpg" alt="">
         <div class="card-body text-center">
           <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
-          <div class="subtitle lh-base">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
+          <div class="subtitle lh-base">Social media has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.
           </div>
           <br>
-          <a href="#" class="card-link text-decoration-none">READ MORE</a>
+          <a href="social-media.html" class="btn btn-primary text-white rounded-5 border-0">Learn More</a>
         </div>
       </div>
     </div>
-
   </section>
-  <!-- OUR SERVICES END -->
 
   <!-- CUSTOMER TESTIMONY -->
   <section class="container-fluid customer-testimony">
