--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <p class="title fs-1 fw-bold">Our Services</p>
     <div class="col">
       <div class="card">
-        <img src="assets/img/photography.jpg" style="display: flex;" alt="">
+        <img src="assets/img/photography.jpg" style="max-height: fit-content;" alt="">
         <div class="card-body text-center">
           <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
           <div class="subtitle lh-base">Social media has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.
