--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   <section class="container-fluid mobile-services">
     <p class="title fs-1 fw-bold">Our Services</p>
     <div class="col">
-      <div class="card">
+      <div class="card mh-50">
         <img src="assets/img/photography.jpg" style="max-height: fit-content;" alt="">
         <div class="card-body text-center">
           <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
@@ -384,7 +384,7 @@
             Khusus Ibukota Jakarta 11740</p>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 overflow-scroll">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.666879455042!2d106.72665651476889!3d-6.175331995529216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f78167bb60d5%3A0x390ec47a1212cbca!2sTrisula%20Center!5e0!3m2!1sid!2sid!4v1683168836580!5m2!1sid!2sid"
           class="location" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -395,20 +395,20 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-9">
+    <!-- <div class="container-fluid"> -->
+      <div class="row d-grid" style="grid-template-columns: 85% auto;">
+        <div class="col">
           <p class="text-white">&copy;
-            <script>document.write(new Date().getFullYear())</script> Tricom
+            <script>document.write(new Date().getFullYear())</script> Tricom. All Rights Reserved
           </p>
         </div>
-        <div class="col-md-1">
+        <div class="col d-grid" style="grid-template-columns: 30% auto;">
           <a href="https://www.instagram.com"><i class="bi bi-instagram"
               style="font-size: 25px; color: #FFFFFF;"></i></a>
           <a href="https://www.youtube.com"><i class="bi bi-youtube" style="font-size: 25px; color: #FFFFFF;"></i></a>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
   </footer>
   <!-- FOOTER END -->
 
