--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
     <p class="title fs-1 fw-bold">Our Services</p>
     <div class="col">
       <div class="card mh-50">
-        <img src="assets/img/photography.jpg" style="height: 10%;" alt="">
-        <div class="card-body text-center">
-          <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
+        <img src="assets/img/photography.jpg" style="height: 25rem;" alt="">
+        <div class="card-body" style="text-align: justify;">
+          <div class="title fw-semibold">Social Media</div>
           <div class="subtitle lh-base">Social media has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.
           </div>
           <br>
@@ -395,20 +395,18 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <!-- <div class="container-fluid"> -->
-      <div class="row d-grid" style="grid-template-columns: 85% auto;">
-        <div class="col">
+      <div class="row d-grid">
+      <div class="col">
           <p class="text-white">&copy;
             <script>document.write(new Date().getFullYear())</script> Tricom. All Rights Reserved
           </p>
         </div>
-        <div class="col d-grid" style="grid-template-columns: 30% auto;">
+        <div class="col sosmed">
           <a href="https://www.instagram.com"><i class="bi bi-instagram"
               style="font-size: 25px; color: #FFFFFF;"></i></a>
           <a href="https://www.youtube.com"><i class="bi bi-youtube" style="font-size: 25px; color: #FFFFFF;"></i></a>
         </div>
       </div>
-    <!-- </div> -->
   </footer>
   <!-- FOOTER END -->
 
