--- a/index.html
+++ b/index.html
@@ -395,7 +395,8 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-      <div class="row d-grid">
+    <div class="row r-footer">
+      <div class="row copyright">
       <div class="col">
           <p class="text-white">&copy;
             <script>document.write(new Date().getFullYear())</script> Tricom. All Rights Reserved
@@ -407,6 +408,15 @@
           <a href="https://www.youtube.com"><i class="bi bi-youtube" style="font-size: 25px; color: #FFFFFF;"></i></a>
         </div>
       </div>
+      <div class="row trisula">
+        <div class="col">
+          <p class="text-white">Powered by</p>
+        </div>
+        <div class="col logo">
+          <img src="assets/img/LOGO_TRISULA.png" alt="">
+        </div>
+      </div>
+    </div>
   </footer>
   <!-- FOOTER END -->
 
