--- a/index.html
+++ b/index.html
@@ -395,7 +395,6 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <div class="row r-footer">
       <div class="row trisula">
         <div class="col">
           <p class="text-white">Powered by</p>
@@ -404,19 +403,19 @@
           <img src="assets/img/LOGO_TRISULA.png" alt="">
         </div>
       </div>
-      <div class="row copyright">
+      <div class="row r-copyright">
       <div class="col">
-          <p class="text-white">&copy;
+          <p class="copyright text-white">&copy;
             <script>document.write(new Date().getFullYear())</script> Tricom. All Rights Reserved
           </p>
         </div>
+        <br>
         <div class="col sosmed">
           <a href="https://www.instagram.com"><i class="bi bi-instagram"
               style="font-size: 25px; color: #FFFFFF;"></i></a>
           <a href="https://www.youtube.com"><i class="bi bi-youtube" style="font-size: 25px; color: #FFFFFF;"></i></a>
         </div>
       </div>
-    </div>
   </footer>
   <!-- FOOTER END -->
 
