--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
           <p class="text-white">Powered by</p>
         </div>
         <div class="col logo">
-          <img src="assets/img/LOGO_TRISULA.png" alt="">
+          <img src="assets/img/trisula-corp.png" alt="">
         </div>
       </div>
       <br>
