--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="card-body d-grid gap-3">
           <p class="card-title fs-3 lh-base fw-semibold">TRICOM Agency is prepared to serve as your company's digital solution.</p>
           <!-- <br> -->
-          <p class="card-text lh-base fw-light">Tricom Agency is a full-service digital marketing agency based in Jakarta, Indonesia. We are powered by a team of experts in website, social media, SEO, digital ads, analytics, and marketing who work with a growth mindset to deliver success for your business.</p>
+          <p class="card-text text lh-base fw-light">Tricom Agency is a full-service digital marketing agency based in Jakarta, Indonesia. We are powered by a team of experts in website, social media, SEO, digital ads, analytics, and marketing who work with a growth mindset to deliver success for your business.</p>
           <!-- <br> -->
           <a href="about-us.html" class="btn btn-primary text-white rounded-5 border-0">Learn More</a>
         </div>
@@ -181,7 +181,7 @@
         <img src="assets/img/photography.jpg" style="height: 25rem;" alt="">
         <div class="card-body" style="text-align: justify;">
           <div class="title fw-semibold">Social Media</div>
-          <div class="subtitle lh-base">Social media has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.
+          <div class="text lh-base">Social media has become a crucial component of modern business. With the help of TRICOM, you can effectively and economically engage with customers, create brand recognition, and boost sales.
           </div>
           <br>
           <a href="social-media.html" class="btn btn-primary text-white rounded-5 border-0">Learn More</a>
@@ -192,8 +192,8 @@
 
   <!-- CUSTOMER TESTIMONY -->
   <section class="container-fluid customer-testimony">
-      <p class="title-testimony fs-1 fw-bold text-center">What They Say?</p>
-      <div class="testimony-content owl-carousel">
+      <p class="title fs-1 fw-bold text-center">What They Say?</p>
+      <div class="testimony-content owl-carousel text">
         <div class="single-testimony text-center text-white lh-lg">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, modi facere? Officiis quos alias delectus laborum modi! Hic iusto commodi totam quaerat distinctio vel labore! Quisquam inventore temporibus laboriosam labore.
           </p>
@@ -268,8 +268,8 @@
 
   <!-- OUR CLIENTS -->
   <section class="container-fluid our-clients" id="our-clients" style="background-color: #d9d9d942;">
-    <p class="title-clients fs-1 fw-bold text-center" style="color: #0659A7 ">Our Satisfied Clients</p>
-    <p class="sub-clients fs-5 fw-light text-center text-dark">We've have the pleasesure of working with many amazing clients.</p>
+    <p class="title fs-1 fw-bold text-center" style="color: #0659A7 ">Our Satisfied Clients</p>
+    <p class="text fs-5 fw-light text-center text-dark">We've have the pleasesure of working with many amazing clients.</p>
     <div class="container text-center">
       <div class="row mb-4">
         <div class="col">
@@ -300,19 +300,19 @@
         </div>
       </div>
     </div>
-    <p class="sub-clients fs-5 fw-light text-center text-dark">Sudah banyak perusahaan yang telah mempercayakan brandnya untuk dikelola oleh agensi kami. Ayo mulai wujudkan brand impian mu bersama kami!</p>
+    <p class="text fs-5 fw-light text-center text-dark">Sudah banyak perusahaan yang telah mempercayakan brandnya untuk dikelola oleh agensi kami. Ayo mulai wujudkan brand impian mu bersama kami!</p>
   </section>
   <!-- OUR CLIENTS END -->
 
   <!-- ARTICLE -->
   <section class="container-fluid" style="gap: 2%;">
-    <p class="title-article fs-1 fw-bold" style="color: #0659A7">Latest Article</p>
+    <p class="title fs-1 fw-bold" style="color: #0659A7">Latest Article</p>
     <div class="container article owl-carousel" style="gap: 2%;">
     <div class="card">
       <img src="assets/img/article.jpg" alt="">
       <div class="card-body text-center">
         <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
-        <div class="subtitle lh-base">
+        <div class="text lh-base">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
         </div>
         <br>
@@ -323,7 +323,7 @@
       <img src="assets/img/article.jpg" alt="">
       <div class="card-body text-center">
         <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
-        <div class="subtitle lh-base">
+        <div class="text lh-base">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
         </div>
         <br>
@@ -334,7 +334,7 @@
       <img src="assets/img/article.jpg" alt="">
       <div class="card-body text-center">
         <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
-        <div class="subtitle lh-base">
+        <div class="text lh-base">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
         </div>
         <br>
@@ -372,32 +372,49 @@
   <!-- ARTICLE END -->
 
   <!-- CONTACT -->
-  <section class="container-fluid contact" id="contact" style="background-color: #D9D9D942;">
-    <p class="title fs-1 fw-bold" style="color: #0659A7">Let’s discuss your project!</p>
-    <div class="row g-0">
-      <div class="col-md-7">
-        <div class="contact-icon">
-          <p class="whatsapp"><i class="bi bi-whatsapp" style="font-size: 25px; color: #0659A7;"></i> 123 123 123</p>
-          <p class="email"><i class="bi bi-envelope" style="font-size: 25px; color: #0659A7;"></i> mail123@gmail.com</p>
-          <p class="address"><i class="bi bi-geo-alt" style="font-size: 25px; color: #0659A7;"></i> Trisula Center Jalan
-            Lingkar Luar Barat Blok A - B 1, RT.14/RW.14, Rw. Buaya, Kecamatan Cengkareng, Kota Jakarta Barat, Daerah
+  <section class="container-fluid contact" id="contact">
+    <p class="title fs-1 fw-bold">Let’s discuss your project!</p>
+    <div class="col text">
+      <div class="row">
+        <div class="col icon text-center">
+          <i class="fa-brands fa-whatsapp" style="color: #0659a7; font-size: 25px;"></i>
+        </div>
+        <div class="col">
+          <p>021-56920213</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col icon">
+          <i class="fa-regular fa-envelope" style="color: #0659a7; font-size: 25px;"></i>
+        </div>
+        <div class="col">
+          <p>tricomagency.trisula.com</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col icon">
+          <i class="fa-regular fa-location-dot" style="color: #0659a7; font-size: 25px;"></i>
+        </div>
+        <div class="col">
+          <p>Trisula Center <br> Jalan Lingkar Luar Barat Blok A - B 1, RT.14/RW.14, Rw. Buaya, Kecamatan Cengkareng, Kota Jakarta Barat, Daerah
             Khusus Ibukota Jakarta 11740</p>
         </div>
       </div>
-      <div class="col-md-4 overflow-scroll">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.666879455042!2d106.72665651476889!3d-6.175331995529216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f78167bb60d5%3A0x390ec47a1212cbca!2sTrisula%20Center!5e0!3m2!1sid!2sid!4v1683168836580!5m2!1sid!2sid"
-          class="location" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
+    </div>
+    <div class="col overflow-scroll">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.666879455042!2d106.72665651476889!3d-6.175331995529216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f78167bb60d5%3A0x390ec47a1212cbca!2sTrisula%20Center!5e0!3m2!1sid!2sid!4v1683168836580!5m2!1sid!2sid"
+        class="location" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
+
   <!-- CONTACT END -->
 
   <!-- FOOTER -->
   <footer class="footer">
       <div class="row trisula">
         <div class="col">
-          <p class="text-white">Powered by</p>
+          <p class="text-white text">Powered by</p>
         </div>
         <div class="col logo">
           <img src="assets/img/trisula-corp.png" alt="">
