--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
   <!-- OUR CLIENTS END -->
 
   <!-- ARTICLE -->
-  <section class="container-fluid" style="gap: 2%;">
-    <p class="title fs-1 fw-bold" style="color: #0659A7">Latest Article</p>
+  <section class="container-fluid" id="article">
+    <p class="title fs-1 fw-bold">Latest Article</p>
     <div class="container article owl-carousel" style="gap: 2%;">
     <div class="card">
       <img src="assets/img/article.jpg" alt="">
@@ -401,7 +401,8 @@
         </div>
       </div>
     </div>
-    <div class="col overflow-scroll">
+    <!-- overflow-scroll -->
+    <div class="col">
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.666879455042!2d106.72665651476889!3d-6.175331995529216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f78167bb60d5%3A0x390ec47a1212cbca!2sTrisula%20Center!5e0!3m2!1sid!2sid!4v1683168836580!5m2!1sid!2sid"
         class="location" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
