--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
       <br>
       <div class="row r-copyright">
       <div class="col">
-          <p class="copyright text-white">&copy;
+          <p class="copyright text text-white">&copy;
             <script>document.write(new Date().getFullYear())</script> Tricom. All Rights Reserved
           </p>
         </div>
