--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
       $(document).ready(function(){
         $('.testimony-content').owlCarousel({
             loop:true,
-            margin:10,
+            margin:50,
             autoplay:true,
             autoplayTimeout:5000,
             smartSpeed:1500,
@@ -329,30 +329,30 @@
     <div class="container text-center">
       <div class="row mb-4">
         <div class="col">
-          <img src="assets/img/jn.png" class="img-fluid rounded-2 border-5" alt="...">
+          <img src="assets/img/logo-jn.png" class="img-fluid rounded-2 border-5" alt="...">
         </div>
         <div class="col">
-          <img src="assets/img/logojobb.png" class="img-fluid rounded-2" alt="...">
+          <img src="assets/img/logo-jobb.png" class="img-fluid rounded-2" alt="...">
         </div>
         <div class="col">
-          <img src="assets/img/chitose.jpg" class="img-fluid rounded-2" alt="...">
+          <img src="assets/img/logo-chitose.png" class="img-fluid rounded-2" alt="...">
         </div>
         <div class="col">
-          <img src="assets/img/logo_ibox.png" class="img-fluid rounded-2" alt="...">
+          <img src="assets/img/logo-bellini.png" class="img-fluid rounded-2" alt="...">
         </div>
       </div>
       <div class="row mb-4">
         <div class="col">
-          <img src="assets/img/logo_bca.png" class="img-fluid rounded-2" alt="...">
+          <img src="assets/img/logo-yukshopping.png" class="img-fluid rounded-2" alt="...">
         </div>
         <div class="col">
-          <img src="assets/img/logo_uniqlo.png" class="img-fluid rounded-2" alt="...">
+          <img src="assets/img/logo-cpro.png" class="img-fluid rounded-2" alt="...">
         </div>
         <div class="col">
-          <img src="assets/img/logo_telkom.png" class="img-fluid rounded-2" alt="...">
+          <img src="assets/img/logo-incozy.png" class="img-fluid rounded-2" alt="...">
         </div>
         <div class="col">
-          <img src="assets/img/logo_toyota.png" class="img-fluid rounded-2" alt="...">
+          <img src="assets/img/logo-Fiore.png" class="img-fluid rounded-2" alt="...">
         </div>
       </div>
     </div>
@@ -365,36 +365,36 @@
     <p class="title fs-1 fw-bold">Latest Article</p>
     <div class="container article owl-carousel" style="gap: 2%;">
     <div class="card">
-      <img src="assets/img/article.jpg" alt="">
+      <img src="assets/img/article.jpg" alt="article-1">
       <div class="card-body text-center">
         <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
         <div class="text lh-base">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
         </div>
         <br>
-        <a href="#" class="card-link text-decoration-none">READ MORE</a>
+        <a href="article-1.html" class="card-link text-decoration-none">READ MORE</a>
       </div>
     </div>
     <div class="card">
-      <img src="assets/img/article.jpg" alt="">
+      <img src="assets/img/article.jpg" alt="article-2">
       <div class="card-body text-center">
         <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
         <div class="text lh-base">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
         </div>
         <br>
-        <a href="#" class="card-link text-decoration-none">READ MORE</a>
+        <a href="article-2.html" class="card-link text-decoration-none">READ MORE</a>
       </div>
     </div>
     <div class="card">
-      <img src="assets/img/article.jpg" alt="">
+      <img src="assets/img/article.jpg" alt="article-3">
       <div class="card-body text-center">
         <div class="title fs-5 fw-semibold mb-2">Hello World!</div>
         <div class="text lh-base">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum unde voluptates aperiam quam rem, aliquid magnam consequuntur quod fugiat labore laudantium odit praesentium ut atque rerum vel commodi quidem quos.
         </div>
         <br>
-        <a href="#" class="card-link text-decoration-none">READ MORE</a>
+        <a href="article-3.html" class="card-link text text-decoration-none">READ MORE</a>
       </div>
     </div>
   </div>
@@ -416,7 +416,7 @@
                   nav:false,
               },
               1000:{
-                  items:2,
+                  items:3,
                   nav:true,
                   loop:false,
               }
@@ -430,8 +430,9 @@
   <!-- CONTACT -->
   <section class="container-fluid contact bg-grey" id="contact">
     <p class="title fs-1 fw-bold">Let’s discuss your project!</p>
+    <div class="row r-maps">
     <div class="col text">
-      <div class="row">
+      <div class="row r-info">
         <div class="col icon">
           <i class="fa-brands fa-whatsapp" style="color: #0659a7; font-size: 25px;"></i>
         </div>
@@ -439,7 +440,7 @@
           <p>021-56920213</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row r-info">
         <div class="col icon">
           <i class="fa-regular fa-envelope" style="color: #0659a7; font-size: 25px;"></i>
         </div>
@@ -447,9 +448,9 @@
           <p>tricomagency.trisula.com</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row r-info">
         <div class="col icon">
-          <i class="fa-regular fa-location-dot" style="color: #0659a7; font-size: 25px;"></i>
+          <i class="bi bi-geo-alt fw-bold" style="color: #0659a7; font-size: 25px;"></i>
         </div>
         <div class="col">
           <p>Trisula Center <br> Jalan Lingkar Luar Barat Blok A - B 1, RT.14/RW.14, Rw. Buaya, Kecamatan Cengkareng, Kota Jakarta Barat, Daerah
@@ -463,6 +464,7 @@
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.666879455042!2d106.72665651476889!3d-6.175331995529216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f78167bb60d5%3A0x390ec47a1212cbca!2sTrisula%20Center!5e0!3m2!1sid!2sid!4v1683168836580!5m2!1sid!2sid"
         class="location" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+  </div>
   </section>
   <!-- CONTACT END -->
 
