--- a/index.html
+++ b/index.html
@@ -326,34 +326,51 @@
   <section class="container-fluid our-clients bg-grey" id="our-clients">
     <p class="title fs-1 fw-bold text-center">Our Satisfied Clients</p>
     <p class="sub-clients text fs-5 fw-light text-center text-dark">We've have the pleasesure of working with many amazing clients.</p>
-    <div class="container text-center">
-      <div class="row mb-4">
-        <div class="col">
-          <img src="assets/img/logo-jn.png" class="img-fluid rounded-2 border-5" alt="...">
-        </div>
-        <div class="col">
-          <img src="assets/img/logo-jobb.png" class="img-fluid rounded-2" alt="...">
-        </div>
-        <div class="col">
-          <img src="assets/img/logo-chitose.png" class="img-fluid rounded-2" alt="...">
-        </div>
-        <div class="col">
-          <img src="assets/img/logo-bellini.png" class="img-fluid rounded-2" alt="...">
-        </div>
+    <div class="brand d-grid">
+      <div class="col">
+        <img src="assets/img/logo-jn.png" class="img-fluid rounded-2 border-5" alt="...">
       </div>
-      <div class="row mb-4">
-        <div class="col">
-          <img src="assets/img/logo-yukshopping.png" class="img-fluid rounded-2" alt="...">
-        </div>
-        <div class="col">
-          <img src="assets/img/logo-cpro.png" class="img-fluid rounded-2" alt="...">
-        </div>
-        <div class="col">
-          <img src="assets/img/logo-incozy.png" class="img-fluid rounded-2" alt="...">
-        </div>
-        <div class="col">
-          <img src="assets/img/logo-Fiore.png" class="img-fluid rounded-2" alt="...">
-        </div>
+      <div class="col">
+        <img src="assets/img/logo-YesCare.png" class="img-fluid rounded-2" alt="...">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-chitose.png" class="img-fluid rounded-2" alt="...">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-cpro.png" class="img-fluid rounded-2" alt="...">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-Fiore.png" class="img-fluid rounded-2" alt="...">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-bellini.png" class="img-fluid rounded-2" alt="...">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-yukshopping2.png" class="img-fluid rounded-2" alt="...">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-jobb.png" class="img-fluid rounded-2" alt="..." style="width: 70%;">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-medico.png" class="img-fluid rounded-2" alt="...">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-incozy.png" class="img-fluid rounded-2" alt="...">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-spoon.png" class="img-fluid rounded-2" alt="...">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-swoosh.png" class="img-fluid rounded-2" alt="...">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-monster.png" class="img-fluid rounded-2" alt="..." style="width: 50%;">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-zao.png" class="img-fluid rounded-2" alt="..." style="width: 70%;">
+      </div>
+      <div class="col">
+        <img src="assets/img/logo-Embun.png" class="img-fluid rounded-2" alt="..." style="width: 50%;">
       </div>
     </div>
     <p class="sub-clients text fs-5 fw-light text-center text-dark">Sudah banyak perusahaan yang telah mempercayakan brandnya untuk dikelola oleh agensi kami. Ayo mulai wujudkan brand impian mu bersama kami!</p>
@@ -470,7 +487,8 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-      <div class="row trisula">
+    <div class="row">
+      <div class="row trisula text-center d-block">
         <div class="col">
           <p class="text-white text">Powered by</p>
         </div>
@@ -492,6 +510,7 @@
           <a href="https://www.youtube.com"><i class="bi bi-youtube" style="font-size: 25px; color: #FFFFFF;"></i></a>
         </div>
       </div>
+    </div>
   </footer>
   <!-- FOOTER END -->
 
